--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -208,6 +208,12 @@ form button:hover {
     font-size: 12px; /* Ajuste o tamanho da fonte para dispositivos móveis */
   }
 
+  .TaskList .task {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+  }
+
   .TaskList .task-details h3 {
     font-size: 14px; /* Ajuste o tamanho da fonte */
   }
