--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -122,6 +122,7 @@ form button:hover {
   background-color: #2196F3; /* Cor azul para o botão "Editar" */
   color: #fff;
   border-radius: 15px; /* Bordas arredondadas */
+  transition: background-color 0.3s;
 }
 
 .edit-button:hover {
@@ -133,6 +134,7 @@ form button:hover {
   background-color: #f44336; /* Cor vermelha para o botão "Excluir" */
   color: #fff;
   border-radius: 15px; /* Bordas arredondadas */
+  transition: background-color 0.3s;
 }
 
 .delete-button:hover {
@@ -186,6 +188,7 @@ form button:hover {
   padding: 5px 0;
   border-radius: 5px;
   background-color: #d3d3d3;
+  transition: background-color 0.3s;
 }
 
 .status-indicator.active {
