--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Lilita+One&family=Ultra&display=swap');
+
+
 /* Estilos Gerais */
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Ultra", serif;  
+  font-style: normal;
   background: linear-gradient(to bottom, #f4f4f4, #e0e0e0);
   margin: 0;
   padding: 0;
