--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  min-height: 200vh;
+  min-height: 100vh;
   color: #333;
   box-sizing: border-box;
 }
@@ -23,6 +23,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 95%;
+  height: 550px;
   max-width: 1800px; /* Muito mais largo */
   text-align: center;
   display: flex;
