resolvendo problema de layout da tela

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,6 +30,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 40px auto;
+  margin-top: 50px;
   color: #333;
   /* Removida a altura mínima para permitir altura natural */
 }
