--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -119,6 +119,7 @@ form button[type="submit"] {
   width: 70%;
   color: #fff;
   border: none;
+  margin-left: 35px;
   border-radius: 15px;
   cursor: pointer;
   transition: background-color 0.3s;
@@ -360,9 +361,8 @@ form button:hover {
   margin: 0 2px;
 }
 
-/* Padding extra para o status 'in progress' (segundo indicador) */
-.status-indicator:nth-child(3) {
-  padding: 5px 8px; /* Padding horizontal extra para in progress */
+.status-indicator:first-child {
+  padding: 5px 8px; /* Padding horizontal extra para to do */
 }
 
 /* Padding extra para o status 'in progress' (segundo indicador) */
