--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,7 +44,7 @@ body {
   width: 120px;
   height: 70px;
   padding: 0;
-  margin: 0;
+  margin-top: -20px;
 }
 
 /* Estilos do Formulário - mais compacto horizontalmente */
