ajustando style do dashboard do task carregamento e padding noo logo

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -340,6 +340,11 @@ form button:hover {
   text-align: center;
 }
 
+.loading-message {
+  width: 500px;
+  background: #cecece;
+}
+
 /* Barra de progresso mais compacta */
 .progress-bar {
   display: flex;
